--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = django22-py{35,36,37}, django228-py{38}, django30-py{36,37,38}
+envlist = django22-py{35,36,37}, django228-py{38}, django30-py{36,37,38}, django31-py{36,37,38}, django32-py{36,37,38}
 
 
 [testenv]
@@ -15,4 +15,6 @@ deps =
     django22: django>=2.2,<3.0
     django228: django>=2.2.8,<3.0
     django30: django>=3.0,<3.1
+    django31: django>=3.1,<3.2
+    django32: django>=3.2,<4.0
     -r{toxinidir}/requirements-test.txt
